{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 178,
  "lineage": "7cbb06f2-87be-d43f-0b70-61044974fa3d",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844085826365:security-group/sg-0e2e721b691a47c4a",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0e2e721b691a47c4a",
            "ingress": [],
            "name": "myAppp-eks-cluster-cluster-2024092515420335180000000b",
            "name_prefix": "myAppp-eks-cluster-cluster-",
            "owner_id": "844085826365",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myAppp-eks-cluster-cluster",
              "application": "myAppp",
              "environment": "development"
            },
            "tags_all": {
              "Name": "myAppp-eks-cluster-cluster",
              "application": "myAppp",
              "environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-009f818fabb53af96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myAppp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844085826365:security-group/sg-0c9c5c19b2549b59c",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0c9c5c19b2549b59c",
            "ingress": [],
            "name": "myAppp-eks-cluster-node-2024092515420332090000000a",
            "name_prefix": "myAppp-eks-cluster-node-",
            "owner_id": "844085826365",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myAppp-eks-cluster-node",
              "application": "myAppp",
              "environment": "development",
              "kubernetes.io/cluster/myAppp-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "myAppp-eks-cluster-node",
              "application": "myAppp",
              "environment": "development",
              "kubernetes.io/cluster/myAppp-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-009f818fabb53af96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myAppp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3041089553",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e2e721b691a47c4a",
            "security_group_rule_id": "sgr-05d8d13fea3d411a4",
            "self": false,
            "source_security_group_id": "sg-0c9c5c19b2549b59c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myAppp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-4145077896",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c9c5c19b2549b59c",
            "security_group_rule_id": "sgr-03c468653b4715e58",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myAppp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-154956286",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c9c5c19b2549b59c",
            "security_group_rule_id": "sgr-069800f4076752d25",
            "self": false,
            "source_security_group_id": "sg-0e2e721b691a47c4a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myAppp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-75626349",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c9c5c19b2549b59c",
            "security_group_rule_id": "sgr-009b9299b863e3445",
            "self": false,
            "source_security_group_id": "sg-0e2e721b691a47c4a",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myAppp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3452145915",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c9c5c19b2549b59c",
            "security_group_rule_id": "sgr-005eb4877f2333979",
            "self": false,
            "source_security_group_id": "sg-0e2e721b691a47c4a",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myAppp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3735006426",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c9c5c19b2549b59c",
            "security_group_rule_id": "sgr-0ca3167c78f170367",
            "self": false,
            "source_security_group_id": "sg-0e2e721b691a47c4a",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myAppp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3124666129",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c9c5c19b2549b59c",
            "security_group_rule_id": "sgr-04177c91728163fe7",
            "self": false,
            "source_security_group_id": "sg-0e2e721b691a47c4a",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myAppp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3780170386",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c9c5c19b2549b59c",
            "security_group_rule_id": "sgr-075c478c8fc0850e3",
            "self": false,
            "source_security_group_id": "sg-0e2e721b691a47c4a",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myAppp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1552048516",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c9c5c19b2549b59c",
            "security_group_rule_id": "sgr-05adb6efb951deecd",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myAppp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2689597808",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c9c5c19b2549b59c",
            "security_group_rule_id": "sgr-0d3421628207416ea",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myAppp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-68133535",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0c9c5c19b2549b59c",
            "security_group_rule_id": "sgr-0e29a77a7c6f1756e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myAppp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.myAppp-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844085826365:network-acl/acl-0eb98983bad48d427",
            "default_network_acl_id": "acl-0eb98983bad48d427",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0eb98983bad48d427",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "844085826365",
            "subnet_ids": [
              "subnet-04505eab8bcb64186",
              "subnet-07dfb4142db34cf7a",
              "subnet-0a6a9d1aa541f0775",
              "subnet-0aa12a43401ce5de5",
              "subnet-0cd4e8195b9b9a493",
              "subnet-0d0b97079cf7bd45f"
            ],
            "tags": {
              "Name": "myAppp-vpc-default",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myAppp-vpc-default",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-009f818fabb53af96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myAppp-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myAppp-vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844085826365:route-table/rtb-08d924b353190a657",
            "default_route_table_id": "rtb-08d924b353190a657",
            "id": "rtb-08d924b353190a657",
            "owner_id": "844085826365",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "myAppp-vpc-default",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myAppp-vpc-default",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-009f818fabb53af96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myAppp-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myAppp-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844085826365:security-group/sg-0cc3f3d3878fc197b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0cc3f3d3878fc197b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "844085826365",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myAppp-vpc-default",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myAppp-vpc-default",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-009f818fabb53af96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myAppp-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myAppp-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae6ae2730e68eb5a",
            "arn": "arn:aws:ec2:us-east-2:844085826365:elastic-ip/eipalloc-0ae6ae2730e68eb5a",
            "domain": "vpc",
            "id": "eipalloc-0ae6ae2730e68eb5a",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-217-51-137.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.51.137",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "myAppp-vpc-us-east-2a",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myAppp-vpc-us-east-2a",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myAppp-vpc.aws_internet_gateway.this",
            "module.myAppp-vpc.aws_vpc.this",
            "module.myAppp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myAppp-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844085826365:internet-gateway/igw-0ab31646b2c7bdb0e",
            "id": "igw-0ab31646b2c7bdb0e",
            "owner_id": "844085826365",
            "tags": {
              "Name": "myAppp-vpc",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myAppp-vpc",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-009f818fabb53af96"
          },
          "dependencies": [
            "module.myAppp-vpc.aws_vpc.this",
            "module.myAppp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myAppp-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae6ae2730e68eb5a",
            "association_id": "eipassoc-032bc55601f94ba4b",
            "connectivity_type": "public",
            "id": "nat-0a8e915ac5a1e5683",
            "network_interface_id": "eni-0c6d85e611693f938",
            "private_ip": "10.0.4.6",
            "public_ip": "18.217.51.137",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a6a9d1aa541f0775",
            "tags": {
              "Name": "myAppp-vpc-us-east-2a",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myAppp-vpc-us-east-2a",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myAppp-vpc.aws_eip.nat",
            "module.myAppp-vpc.aws_internet_gateway.this",
            "module.myAppp-vpc.aws_subnet.public",
            "module.myAppp-vpc.aws_vpc.this",
            "module.myAppp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myAppp-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0abdaaab1c8557f3e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a8e915ac5a1e5683",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0abdaaab1c8557f3e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myAppp-vpc.aws_eip.nat",
            "module.myAppp-vpc.aws_internet_gateway.this",
            "module.myAppp-vpc.aws_nat_gateway.this",
            "module.myAppp-vpc.aws_route_table.private",
            "module.myAppp-vpc.aws_subnet.public",
            "module.myAppp-vpc.aws_vpc.this",
            "module.myAppp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myAppp-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ab31646b2c7bdb0e",
            "id": "r-rtb-062b58a70791d004c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-062b58a70791d004c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myAppp-vpc.aws_internet_gateway.this",
            "module.myAppp-vpc.aws_route_table.public",
            "module.myAppp-vpc.aws_vpc.this",
            "module.myAppp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myAppp-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844085826365:route-table/rtb-0abdaaab1c8557f3e",
            "id": "rtb-0abdaaab1c8557f3e",
            "owner_id": "844085826365",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myAppp-vpc-private",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myAppp-vpc-private",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-009f818fabb53af96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myAppp-vpc.aws_vpc.this",
            "module.myAppp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myAppp-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844085826365:route-table/rtb-062b58a70791d004c",
            "id": "rtb-062b58a70791d004c",
            "owner_id": "844085826365",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myAppp-vpc-public",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myAppp-vpc-public",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-009f818fabb53af96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myAppp-vpc.aws_vpc.this",
            "module.myAppp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myAppp-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09eefda08989fb506",
            "route_table_id": "rtb-0abdaaab1c8557f3e",
            "subnet_id": "subnet-0d0b97079cf7bd45f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myAppp-vpc.aws_route_table.private",
            "module.myAppp-vpc.aws_subnet.private",
            "module.myAppp-vpc.aws_vpc.this",
            "module.myAppp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002644019db745ce4",
            "route_table_id": "rtb-0abdaaab1c8557f3e",
            "subnet_id": "subnet-04505eab8bcb64186"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myAppp-vpc.aws_route_table.private",
            "module.myAppp-vpc.aws_subnet.private",
            "module.myAppp-vpc.aws_vpc.this",
            "module.myAppp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0772f25c812e4cbee",
            "route_table_id": "rtb-0abdaaab1c8557f3e",
            "subnet_id": "subnet-0cd4e8195b9b9a493"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myAppp-vpc.aws_route_table.private",
            "module.myAppp-vpc.aws_subnet.private",
            "module.myAppp-vpc.aws_vpc.this",
            "module.myAppp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myAppp-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d26a6a5a28d3400d",
            "route_table_id": "rtb-062b58a70791d004c",
            "subnet_id": "subnet-0a6a9d1aa541f0775"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myAppp-vpc.aws_route_table.public",
            "module.myAppp-vpc.aws_subnet.public",
            "module.myAppp-vpc.aws_vpc.this",
            "module.myAppp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbc61d48c360c8dc",
            "route_table_id": "rtb-062b58a70791d004c",
            "subnet_id": "subnet-07dfb4142db34cf7a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myAppp-vpc.aws_route_table.public",
            "module.myAppp-vpc.aws_subnet.public",
            "module.myAppp-vpc.aws_vpc.this",
            "module.myAppp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be2d2ed30e0ca6a6",
            "route_table_id": "rtb-062b58a70791d004c",
            "subnet_id": "subnet-0aa12a43401ce5de5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myAppp-vpc.aws_route_table.public",
            "module.myAppp-vpc.aws_subnet.public",
            "module.myAppp-vpc.aws_vpc.this",
            "module.myAppp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myAppp-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844085826365:subnet/subnet-0d0b97079cf7bd45f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0b97079cf7bd45f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844085826365",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myAppp-vpc-private-us-east-2a",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "myAppp-vpc-private-us-east-2a",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-009f818fabb53af96"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myAppp-vpc.aws_vpc.this",
            "module.myAppp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844085826365:subnet/subnet-04505eab8bcb64186",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04505eab8bcb64186",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844085826365",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myAppp-vpc-private-us-east-2b",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "myAppp-vpc-private-us-east-2b",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-009f818fabb53af96"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myAppp-vpc.aws_vpc.this",
            "module.myAppp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844085826365:subnet/subnet-0cd4e8195b9b9a493",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd4e8195b9b9a493",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844085826365",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myAppp-vpc-private-us-east-2c",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "myAppp-vpc-private-us-east-2c",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-009f818fabb53af96"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myAppp-vpc.aws_vpc.this",
            "module.myAppp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.myAppp-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844085826365:subnet/subnet-0a6a9d1aa541f0775",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6a9d1aa541f0775",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844085826365",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myAppp-vpc-public-us-east-2a",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "myAppp-vpc-public-us-east-2a",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-009f818fabb53af96"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myAppp-vpc.aws_vpc.this",
            "module.myAppp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844085826365:subnet/subnet-07dfb4142db34cf7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07dfb4142db34cf7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844085826365",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myAppp-vpc-public-us-east-2b",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "myAppp-vpc-public-us-east-2b",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-009f818fabb53af96"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myAppp-vpc.aws_vpc.this",
            "module.myAppp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844085826365:subnet/subnet-0aa12a43401ce5de5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa12a43401ce5de5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844085826365",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myAppp-vpc-public-us-east-2c",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "myAppp-vpc-public-us-east-2c",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-009f818fabb53af96"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.myAppp-vpc.aws_vpc.this",
            "module.myAppp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myAppp-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:844085826365:vpc/vpc-009f818fabb53af96",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eb98983bad48d427",
            "default_route_table_id": "rtb-08d924b353190a657",
            "default_security_group_id": "sg-0cc3f3d3878fc197b",
            "dhcp_options_id": "dopt-0b68f2f60e89a0532",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-009f818fabb53af96",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08d924b353190a657",
            "owner_id": "844085826365",
            "tags": {
              "Name": "myAppp-vpc",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myAppp-vpc",
              "kubernetes.io/cluster/myAppp-eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}